--- a/app/index.html
+++ b/app/index.html
@@ -25,12 +25,10 @@
         <div class="navbar navbar-default" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-
-                    <a class="navbar-brand" href="#/">senseMaking</a>
+                    <h1><a class="navbar-brand" href="#/">senseMaking</a></h1>
                 </div>
 
                 <div class="collapse">
-
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#/">Home</a></li>
                         <li><a ng-href="#/about">About</a></li>
