--- a/app/index.html
+++ b/app/index.html
@@ -22,31 +22,23 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-        <div class="navbar navbar-default" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <h1><a class="navbar-brand" href="#/">senseMaking</a></h1>
-                </div>
+        <div ng-view="current-month"></div>
+        <a class="navbar-brand" href="#/">
+            <img src="images/logo.png" alt="senseMaking" />
+        </a>
+    </div>
 
-                <div class="collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#/">Home</a></li>
-                        <li><a ng-href="#/about">About</a></li>
-                        <li><a ng-href="#/">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <div ng-view="months"></div>
+        <div ng-view="entities"></div>
     </div>
 
     <div class="container">
         <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-        <div class="container">
-            <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-        </div>
+    <div class="container">
+        <div ng-view="trendline"></div>
     </div>
 
 
