--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../bower_components/semantic-ui/dist/semantic.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <!-- endbuild -->
 </head>
 <body ng-app="senseMakingApp">
@@ -62,6 +63,7 @@
 
     <div class="container">
         <div ng-view="" id="major-news">This Month's Major News</div>
+        <div ng-view=""></div>
     </div>
 
     <div class="container">
