--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 
     <div class="container">
         <div ng-view="" id="major-news">This Month's Major News</div>
-        <div ng-view="">{{docNumbers}}</div>
+        <div ng-view=""></div>
     </div>
 
     <div class="container">
