--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="container">
-        <div ng-view="months" id="months" style="width:25%;">
+        <div id="months" style="width:25%;"><!--I removed ng-view="months" -->
             <table>
                 <tr>
                     <td>Jan</td>
@@ -63,7 +63,26 @@
 
     <div class="container">
         <div ng-view="" id="major-news">This Month's Major News</div>
-        <div ng-view=""></div>
+        <div class="ui vertically divided grid">
+        	<div class="four column row"> <!--class change depending on # of documents that month-->
+            	<div class="column major-news">
+                	<h2>Title 1</h2>
+                <p style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                </div>
+
+
+			<div class="column major-news">
+            	<h2>Title 2</h2>
+                <p style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>
+            
+            
+            <div class="column major-news">
+            	<h2>Title 3</h2>
+                <p style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>
+           </div>
+        </div>
     </div>
 
     <div class="container">
@@ -139,6 +158,7 @@
 			.append("svg")
 			.attr("width", width )
 			.attr("height", height);
+		
 			
 		var bars = canvas.selectAll(".rect")
 			.data(CountsArray)
@@ -155,6 +175,7 @@
 
 		
     </script>
+
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
