--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 </head>
 <body ng-app="SenseMakingApp" ng-controller="MainCtrl">
     <div class="container">
+    <img src="images/bg.jpg"/>
         <div ng-view="current-month" id="current-month" data-ng-app="MonthControllerApp">
                         <p>2004</p>
                         <section id="month" data-ng-controller="MonthController">
