Separated controller responsibilities

--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
         <div>This Month's Trend Line</div>
         <button type="button" id="regenerategraph" onClick="drawc3graph()">Refresh</button>
         <button type="button" id="load" onClick="load()">Load</button>
-        <div id="chart"></div>
+        <div id="chart" ng-controller="ChartCtrl"></div>
     </div><!--container-->
 
     <!-- build:js(.) scripts/vendor.js -->
