Added the black bar on top

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
 </head>
 <body ng-app="SenseMakingApp" ng-controller="MainCtrl">
+	<div class="ui inverted segment"></div>
     <div class="container">
         <div id="current-month">
             <p>2004</p>
