--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <div id="chart" ng-controller="ChartCtrl"></div>
     </div><!--container-->
 
+    <div id="demo"></div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/angular/angular.js"></script>
