Add id=substring to myFunction()

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 						}
 
                     </script>
-                    <div id="demo"><button onClick="myFunction()">Substring</button></div>
+                    <div id="demo"><button onClick="myFunction()" id="substring">Substring</button></div>
                 </div>
            </div><!--N column row, N depends on how many news articles there are in that month-->
         </div><!--ui vertically divided grid-->
