on-init change color for sentiment ribbon

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,8 @@
                 	<h2 id="title1">{{id}}</h2>
                     <h5 id="author1"></h5>
                     <p id="body1">{{body}}</p>
-
+                    <div id="sentiment" class="ui top attached label customize-color" ng-init="SetSentiment(frequency)">Sentiment Color</div>
+                    
                     <script>
                     	function myFunction() {
 							var str = "AHS principal talks about course changes Story by: John Panni Date Published to Web: 4/1/2004"
