--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
         	<div class="column row">
             	<div class="column" ng-repeat="obi in obituraries">
                 	<p>{{obi}}</p>
-                    <h4 id="Obiturarytitle1">{{obi}}</h4>
+                    <h4 id="Obiturarytitle1"></h4>
                 </div>
             </div>
         </div>
