Add Orange Label to Trendline

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
 
 <!--Trendline-->
 
-    <h1 class="ui header" id="trendline">Trend Line of {{currentMonth}}</h1>
+    <h1 class="ui header ui orange label" id="trendline">Trend Line of {{currentMonth}}</h1>
     <div class="container" id="chart"></div>
 
     <div id="demo"></div>
