--- a/app/index.html
+++ b/app/index.html
@@ -47,10 +47,10 @@
         	<div class="column row"> <!--class change depending on # of documents that month-->
             	<div class="column major-news" ng-repeat="document in documents">
                 	<h3 class="DocTitle" id="title1">{{document.id}}</h3>
-                    <h5 class="DocAuthorAndDate dividing header" id="AuthorAndPublishDate1">{{author}}</h5>
+                    <h5 class="DocAuthorAndDate dividing header">{{document.byline}}</h5>
                     <p class="DocBody" id="body1">{{document.body}}</p>
                     <br></br>
-                    <div id="sentiment" class="ui top attached label customize-color" ng-init="SetDocContents(frequency)"></div>
+                    <div id="sentiment" style="{{document.sentimentCSS}}" class="ui top attached label customize-color"></div>
                 </div>
            </div><!--N column row, N depends on how many news articles there are in that month-->
         </div><!--ui vertically divided grid-->
