--- a/app/index.html
+++ b/app/index.html
@@ -42,16 +42,16 @@
 
     <h1 class="ui header teal label" id="FirstTitle" ng-show="currentKeyword">Documents from {{currentMonth}} containing "{{currentKeyword}}"</h1>
     <div class="container">
-        <div class="ui vertically divided grid">
-        	<div class="column row">
-            	<div class="column major-news" ng-repeat="document in documents">
-                	<h3 class="DocTitle">{{document.id}}</h3>
+        <div class="ui grid">
+        	
+            	<div class="four wide column major-news" ng-repeat="document in documents">
+                	<div id="sentiment" style="{{document.sentimentCSS}}" class="ui top attached label customize-color"></div>
+                    <h3 class="DocTitle">{{document.id}}</h3>
                     <h5 class="DocAuthorAndDate dividing header">{{document.byline}}</h5>
                     <p class="DocBody">{{document.body}}</p>
-                    <div id="sentiment" style="{{document.sentimentCSS}}" class="ui top attached label customize-color"></div>
                 </div>
-           </div><!--N column row, N depends on how many news articles there are in that month-->
-        </div><!--ui vertically divided grid-->
+
+        </div><!--ui grid-->
     </div><!--container-->
 
 
