controller.js getDocument
Line 84-95

--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
                     <span class="major-news" >
                        <div id="sentiment" style="{{document.sentimentCSS}}" class="customize-color"></div>
                        <div style="margin:2em 2em 2em 2em;">
-                       	 <h3 class="DocTitle">{{document.id}}</h3>
-                         <h5 class="DocAuthorAndDate dividing header">{{document.byline}}</h5>
+                       	 <h3 class="DocTitle">{{document.title}}</h3>
+                         <h5 class="DocAuthorAndDate dividing header">{{document.date}}</h5>
                          <p class="DocBody">{{document.body}}</p>
                          <div class="ui inverted blue button">Read More</div>
                        </div>
